# CSLibTorchMNIST

./: .gitignore  CSLibTorchMNIST.sln
CSLibTorchMNIST/: CSLibTorchMNIST.csproj  Program.cs
CSLibTorchMNIST/Properties/: launchSettings.json
libmnist/: CMakeLists.txt  mnist.cpp  test.cpp
